integrated ALAT api
